lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_config_and_flag_edge_cases.snap
---
source: lib/src/sdk/typescript/types.rs
expression: types
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.

export interface MyappArgs {
  /** Input file. Environment variable: MYAPP_INPUT */
  input: string;
}

export interface MyappFlags {
  /** Reserved keyword. @deprecated Use --kind */
  _type?: boolean;
  /** Flag with short and long alias. Aliases: --fmt */
  format?: string;
  /** Short-only flag */
  v?: boolean;
}

export interface MyappConfig {
  /** Enable debug mode */
  debug?: boolean;
  extra: unknown;
  host: string;
  port?: number;
  rate?: number;
}
