lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_config_boolean_default_false.snap
---
source: lib/src/sdk/typescript/types.rs
expression: types
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.

export interface AppConfig {
  /** Dry run mode */
  dry_run?: boolean;
  /** Verbose output */
  verbose?: boolean;
}
