lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_config_string_with_default.snap
---
source: lib/src/sdk/typescript/types.rs
expression: types
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.

export interface AppConfig {
  /** Server host */
  host?: string;
  name?: string;
}
