lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_flag_edge_cases-2.snap
---
source: lib/src/sdk/typescript/types.rs
expression: client
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.
import { CliRunner, CliResult } from "./runtime";
import { ToolFlags } from "./types";

export class Tool {
  private runner: CliRunner;

  constructor(binPath?: string) {
    this.runner = new CliRunner(binPath ?? "tool");
  }
  /** <FLAGS> */
  async exec(flags?: ToolFlags): Promise<CliResult> {
    const cmdArgs: string[] = [];
    const flagArgs = this.buildFlagArgs(flags);
    cmdArgs.push(...flagArgs);
    return this.runner.run(cmdArgs);
  }

  private buildFlagArgs(flags?: ToolFlags): string[] {
    const result: string[] = [];
    if (!flags) return result;
    if (flags.v) { result.push("-v"); }
    if (flags._type) { result.push("--type"); }
    if (flags.level !== undefined && flags.level > 0) { for (let i = 0; i < flags.level; i++) { result.push("--level"); } }
    if (flags.format !== undefined) { result.push("--format", String(flags.format)); }
    if (flags.confirm) { result.push("--confirm"); }
    if (flags.verbose !== undefined) { for (const v of flags.verbose) { if (v) result.push("--verbose"); } }
    return result;
  }
}
