lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_flag_edge_cases.snap
---
source: lib/src/sdk/typescript/types.rs
expression: types
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.

export interface ToolFlags {
  /** Short-only flag */
  v?: boolean;
  /** Reserved keyword. @deprecated Use --kind */
  _type?: boolean;
  /** Count flag with default. @default 2 */
  level?: number;
  /** Value flag with default. @default json */
  format?: string;
  /** Required flag */
  confirm: boolean;
  /** Repeatable boolean flag */
  verbose?: boolean[];
}
