lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_flag_with_choices.snap
---
source: lib/src/sdk/typescript/types.rs
expression: types
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.

export type ShellChoice = "bash" | "zsh" | "fish";

export interface ToolFlags {
  /** Shell type */
  shell?: ShellChoice;
}
