lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_flag_with_env.snap
---
source: lib/src/sdk/typescript/types.rs
expression: types
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.

export interface AppFlags {
  /** Config file. Environment variable: APP_CONFIG */
  config?: string;
}
