lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_global_flags_flags_only.snap
---
source: lib/src/sdk/typescript/types.rs
expression: client
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.
import { CliRunner, CliResult } from "./runtime";
import { AppFlags, GlobalFlags, StatusFlags } from "./types";

export class App {
  private runner: CliRunner;
  /** Show status */
  readonly status: Status;
  /** Show info */
  readonly info: Info;

  constructor(binPath?: string) {
    this.runner = new CliRunner(binPath ?? "app");
    this.status = new Status(this.runner);
    this.info = new Info(this.runner);
  }
  /** [-v --verbose] [SUBCOMMAND] */
  async exec(flags?: AppFlags): Promise<CliResult> {
    const cmdArgs: string[] = [];
    const flagArgs = this.buildFlagArgs(flags);
    return this.runner.run([...cmdArgs, ...flagArgs]);
  }

  private buildFlagArgs(flags?: AppFlags): string[] {
    const result: string[] = [];
    if (!flags) return result;
    if (flags.verbose) { result.push("--verbose"); }
    return result;
  }
}

/** Show status */
export class Status {
  private runner: CliRunner;

  constructor(runner: CliRunner) {
    this.runner = runner;
  }
  /** status [--json] */
  async exec(flags?: StatusFlags): Promise<CliResult> {
    const cmdArgs: string[] = ["status"];
    const flagArgs = this.buildFlagArgs(flags);
    return this.runner.run([...cmdArgs, ...flagArgs]);
  }

  private buildFlagArgs(flags?: StatusFlags): string[] {
    const result: string[] = [];
    if (!flags) return result;
    if (flags.verbose) { result.push("--verbose"); }
    if (flags.json) { result.push("--json"); }
    return result;
  }
}

/** Show info */
export class Info {
  private runner: CliRunner;

  constructor(runner: CliRunner) {
    this.runner = runner;
  }
  /** info */
  async exec(flags?: GlobalFlags): Promise<CliResult> {
    const cmdArgs: string[] = ["info"];
    const flagArgs = this.buildFlagArgs(flags);
    return this.runner.run([...cmdArgs, ...flagArgs]);
  }

  private buildFlagArgs(flags?: GlobalFlags): string[] {
    const result: string[] = [];
    if (!flags) return result;
    if (flags.verbose) { result.push("--verbose"); }
    return result;
  }
}
